# openai_api_compatible

./: .difyignore  main.py  manifest.yaml  pyproject.toml  requirements.txt
models/: common_openai.py  logging_config.py
models/llm/: llm.py
models/rerank/: rerank.py
models/speech2text/: speech2text.py
models/text_embedding/: text_embedding.py
models/tts/: tts.py
provider/: openai_api_compatible.yaml
tests/: test_auth_headers.py  test_handle_response.py  test_reason_wrapper.py  test_text_embedding.py
